Static documentation page done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<ul class="navbar">
+    <li>Playground</li>
+    <li>Documentation</li>
+    <li>
+      <a href="docs/learn">
+        <mat-icon>person</mat-icon>
+        Login
+      </a>
+    </li>
+  </ul>
 <router-outlet />
