Populating the documentation

--- a/src/app/pages/docs-page/docs-page.component.html
+++ b/src/app/pages/docs-page/docs-page.component.html
@@ -21,9 +21,20 @@
       technologies.
     </p>
     <hr class="divider">
-    <h2>ENDPOINTS</h2>
+    <h2>Endpoints Descriptions</h2>
+    <p><strong class="get">GET</strong> /img - Retrieves a complete list of all images stored in the database.</p>
+    <p><strong class="get">GET</strong> /random/img - Fetches a randomly selected image from the database.</p>
+    <p><strong class="post">POST</strong> /img/upload - Allows you to upload a new image to the database.</p>
+    <p><strong class="post">POST</strong> /img/delete - Pass a list of IDs to delete multiple images from the database.</p>
+    <p><strong class="put">PUT</strong> /update/{{'{id}'}} - Update an existing image in the database using its ID.</p>
+    <p><strong class="delete">DELETE</strong> /img/{{'{id}'}} - Pass a list of IDs to delete multiple images from the database.</p>
+    <hr class="divider">
+    <h2>Params and Returns</h2>
     <div class="endpoint">
-        <ol>
+        
+        <ul>
+            <p>Headers: </p>
+            <img src="headers.svg" alt="headers">
             <li class="endpoint">
                 <h3>Image Endpoints</h3>
                 <mat-accordion>
@@ -32,71 +43,81 @@
                             <p class="method"><strong class="get">GET </strong>: /img</p>
                         </mat-expansion-panel-header>
                         <mat-panel-description>
-                            <p>DESCRIPTION HERE</p>
-                            <img src="carbon.svg" alt="code">
+                            <h3>Params:</h3>
+                            <p>No params...</p>
+                            <h3>Return Example:</h3>
+                            <img src="imgReturn 1.svg" alt="code">
                         </mat-panel-description>
                     </mat-expansion-panel>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
-                            <p class="method"><strong class="post">POST </strong>: </p>
+                            <p class="method"><strong class="get">GET </strong>: /random/img</p>
                         </mat-expansion-panel-header>
                         <mat-panel-description>
-                            <p>DESCRIPTION HERE</p>
-                            <img src="img-get.png" alt="code">
-                        </mat-panel-description>
-                    </mat-expansion-panel>
-                </mat-accordion>
-            </li>
-            <li class="endpoint">
-                <h3>Image Endpoints</h3>
-                <mat-accordion>
-                    <mat-expansion-panel >
-                        <mat-expansion-panel-header>
-                            <p class="method"><strong class="get">GET </strong>: /img</p>
-                        </mat-expansion-panel-header>
-                        <mat-panel-description class="description">
-                            <p>DESCRIPTION HERE</p>
-                            <img src="carbon.svg" alt="code">
+                            <h3>Params:</h3>
+                            <p>No params...</p>
+                            <h3>Return Example:</h3>
+                            <img src="randomImage.svg" alt="code">
                         </mat-panel-description>
                     </mat-expansion-panel>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
-                            <p class="method"><strong class="post">POST </strong>: </p>
+                            <p class="method"><strong class="post">POST </strong>: /img/upload</p>
+                        </mat-expansion-panel-header>
+                        <mat-panel-description>
+                            <h3>Params: (Body)</h3>
+                            <ul>
+                                <li><code>File: </code> <i>File image</i></li>
+                            </ul>
+                            <h3>Return Example:</h3>
+                            <img src="postingImage.svg" alt="code">
+                        </mat-panel-description>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <p class="method"><strong class="post">POST </strong>: /img/deletePics</p>
+                        </mat-expansion-panel-header>
+                        <mat-panel-description>
+                            <h3>Params: (Body)</h3>
+                            <ul>
+                                <li><code>Ids: </code> <i>Array with the id's of the images</i></li>
+                            </ul>
+                            <h3>Return Example:</h3>
+                            <img src="massiveDelete.svg" alt="code">
+                        </mat-panel-description>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <p class="method"><strong class="put">PUT </strong>: /img/update/{{'{id}'}}</p>
                         </mat-expansion-panel-header>
                         <mat-panel-description >
-                            <p>DESCRIPTION HERE</p>
-                            <img src="img-get.png" alt="code">
-                        </mat-panel-description>
-                    </mat-expansion-panel>
-                </mat-accordion>
-            </li>
-            <li class="endpoint">
-                <h3>Image Endpoints</h3>
-                <mat-accordion>
-                    <mat-expansion-panel>
-                        <mat-expansion-panel-header>
-                            <p class="method"><strong class="get">GET </strong>: /img</p>
-                        </mat-expansion-panel-header>
-                        <mat-panel-description>
-                            <p>DESCRIPTION HERE</p>
-                            <img src="carbon.svg" alt="code">
+                            <h3>Params:</h3>
+                            <ul>
+                                <li><code>Id: </code> <i>Id of the image that you want to update</i></li>
+                            </ul>
+                            <h3>Return Example:</h3>
+                            <img src="updateImage.svg" alt="code">
                         </mat-panel-description>
                     </mat-expansion-panel>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
-                            <p class="method"><strong class="post">POST </strong>: </p>
+                            <p class="method"><strong class="delete">DELETE </strong>: /img/{{'{id}'}}</p>
                         </mat-expansion-panel-header>
-                        <mat-panel-description>
-                            <p>DESCRIPTION HERE</p>
-                            <img src="img-get.png" alt="code">
+                        <mat-panel-description >
+                            <h3>Params:</h3>
+                            <ul>
+                                <li><code>Id: </code> <i>Id of the image that you want to delete</i></li>
+                            </ul>
+                            <h3>Return Example:</h3>
+                            <img src="deleteImage.svg" alt="code">
                         </mat-panel-description>
                     </mat-expansion-panel>
                 </mat-accordion>
             </li>
-        </ol>
+        
+            
+        </ul>
     </div>
-
-
     <hr class="divider">
   </div>
 </div>
