--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,9 @@ html, body{
     font-size: 20px;
 }
 .mat-expansion-panel:not([class*=mat-elevation-z]) {
-    box-shadow: none !important;
+    margin-bottom: 20px;
+    padding: 1em;
+}
+.mat-expansion-panel-header-description {
+    align-items: start !important;
 }
