--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<ul class="navbar">
+<nav class="navbar">
+  <ul>
     <li>Playground</li>
     <li>Documentation</li>
     <li>
@@ -8,4 +9,5 @@
       </a>
     </li>
   </ul>
+</nav>
 <router-outlet />
