--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul>
-    <li>Playground</li>
-    <li>Documentation</li>
+    <li><a href="playground">Playground</a></li>
+    <li><a href="docs">Documentation</a></li>
     <li>
       <a href="docs/learn">
         <mat-icon>person</mat-icon>
